# nonebot-plugin-tarina-lang-turbo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: Release.yml
nonebot_plugin_tarina_lang_turbo/: __init__.py  exception.py  hook.py  manager.py  matcher.py
nonebot_plugin_tarina_lang_turbo/i18n/: .config.json  .lang.schema.json  .template.json  en-US.json  model.py  zh-CN.json
